--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </div>
  
   <div id="div2">
-    <h2>I specialize in python(advanced) and now learning HTML,CSS,JS✊🍕</h2>
+    <h2>I specialize in python and basic web development , now learning frameworks and ML</h2>
     
     <sec class="element_1">
       <p>This website is an playground for me so it would be updated often</p></sec>
