Removed excess words in word animator

--- a/vercel2/index.html
+++ b/vercel2/index.html
@@ -150,7 +150,7 @@ window.addEventListener("scroll",function(){
 })
 
 
-var typed =new Typed(".emotion",{strings:["peacefully 😌","while vibing🎶","bad😞","good😎","like me."],typeSpeed:20,backSpeed:40,loop:true,
+var typed =new Typed(".emotion",{strings:["bad😞","good😎","like me."],typeSpeed:20,backSpeed:40,loop:true,
                                 })
 const parallax = document.getElementById("parallax");
 
